# folktime

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: duration.rs  lib.rs
src/duration/: mod.rs  one_unit_frac.rs  one_unit_fractional.rs  one_unit_three_digits.rs  one_unit_whole.rs  two_units_whole.rs
