[package]
name = "folktime"
description = "A library for formatting time-related values in a human-friendly way."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
const-default = { version = "1.0.0", features = ["derive"] }
