[package]
name = "folktime"
description = "Tiny library for approximate formatting of time values in a human-friendly way."
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
